BookDAOCreator to lower number of duplicate code in BookRepository